--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,11 @@
         "sizes": "192x192",
         "type": "image/png",
         "density": "4.0"
+    }, {
+        "src": "favicon/favicon-512x512.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "density": "4.0"
     }],
     "start_url": "index.html?launcher=true",
     "background_color": "#892124",
