--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,15 @@
     "short_name": "Restaurant app",
     "name": "Restaurant app stage 2",
     "icons": [{
-        "src": "images/launcher-icon-1x.png",
+        "src": "favicon/launcher-icon-1x.png",
         "type": "image/png",
         "sizes": "48x48"
     }, {
-        "src": "images/launcher-icon-2x.png",
+        "src": "favicon/launcher-icon-2x.png",
         "type": "image/png",
         "sizes": "96x96"
     }, {
-        "src": "images/launcher-icon-4x.png",
+        "src": "favicon/launcher-icon-4x.png",
         "type": "image/png",
         "sizes": "192x192"
     }, {
